# ArchIt

./: README.md  pyproject.toml
doc/: TODO.md  design.md
src/archit/: __init__.py  compiler.py  util.py
src/archit/declaration/: compiler.py
src/archit/instantiation/: abstracts.py  basemodels.py  configs.py  extensions.py  heads.py  mixins.py  tasks.py
tst/: test_diff.py  test_frompretrained.py  test_util.py
