[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "archit"
version = "2024.11.01"
description = "ArchIt: convert in-place modifications of PyTorch objects into class code."
keywords = ["PyTorch", "machine learning"]

requires-python = ">= 3.10"
authors = [
  {name = "Thomas Bauwens", email = "thomas.bauwens@kuleuven.be"}
]
maintainers = [
  {name = "Thomas Bauwens", email = "thomas.bauwens@kuleuven.be"}
]
readme = "README.md"
license = {file = "LICENSE"}
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]

dependencies = [
    "torch",
    "transformers >= 4.39.3",

    "supar @ git+https://github.com/yzhangcs/parser"
]

[project.optional-dependencies]
github = [
    "tktkt[github] @ git+https://github.com/bauwenst/TkTkT"
]