[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "archit"
version = "2026.01.01"
description = "ArchIt: A framework for base-and-head language models, and toolkit for converting in-place modifications of PyTorch objects into class code."
keywords = ["PyTorch", "machine learning"]

requires-python = ">= 3.10"
authors = [
  {name = "Thomas Bauwens", email = "thomas.bauwens@kuleuven.be"}
]
maintainers = [
  {name = "Thomas Bauwens", email = "thomas.bauwens@kuleuven.be"}
]
readme = "README.md"
license = {file = "LICENSE"}
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]

dependencies = [
    "torch",
    "transformers >= 4.39.3"
]

[project.optional-dependencies]
github = [
    "supar @ git+https://github.com/bauwenst/supar",
    "tktkt[github] @ git+https://github.com/bauwenst/TkTkT"
]